# qnqueens

./: .env.example  README.md  circuit-approach.ipynb  grover.ipynb  main.py  pyproject.toml  qaoa-parameters.json  qaoa-tries.json  qaoa.ipynb  qubo-solution.csv  qubo-tabu-search-solution.csv  qubo.ipynb  solver.ipynb  utils.py
springer-article/: sn-article.aux  sn-article.blg  sn-article.out  sn-article.tex  sn-bibliography.bib
