[project]
name = "qnqueens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dwave-ocean-sdk>=8.4.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pylatexenc>=2.10",
    "python-dotenv>=1.1.1",
    "qiskit==2.0.2",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.40.1",
]
